--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/wcSrsPanelTab.directive.html
@@ -1,16 +1,6 @@
 <!-- PATIENT CONSENT CHECKBOX--->
 <div class="tab-content-title-row">
     <span class="tab-content-title-row-title">
-<!--        <wc-checkbox-wrapper>-->
-<!--            <input type="checkbox" name="srs_patient_consent_checkbox" ng-true-value="'JA'" ng-false-value="'NEJ'" ng-model="srs.consent"-->
-<!--                   class="ng-pristine ng-untouched ng-valid" ng-change="setConsent({{srs.consent}})">-->
-
-<!--            <label ng-attr-for="srs_patient_consent_checkbox">-->
-<!--                <span uib-popover="{{!srs.consentInfo ? 'SAMTYCKE-ALTERNATIV-INFO' :''}}"-->
-<!--                      popover-popup-delay="300" popover-append-to-body="true"-->
-<!--                      popover-placement="top">Patientens samtycke</span>-->
-<!--            </label>-->
-<!--        </wc-checkbox-wrapper>-->
         <div class="line form-group ng-scope">
         <p>Patienten samtycker till att delta i SRS pilotprojekt</p>
         <label class="radio-inline line">
@@ -25,9 +15,7 @@
 <!-- DIAGNOSIS HEADER--->
 <div class="srs-diagnos-row" ng-class="{'has-diagnose' : srs.diagnosKod && srs.diagnosBeskrivning}">
     <div class="srs-panel-title" ng-show="srs.diagnosKod">
-<!--        <h4>-->
-            <span id="srs_diagnos_heading">{{srs.diagnosKod}} - {{srs.diagnosBeskrivning}}</span>
-<!--        </h4>-->
+        <span id="srs_diagnos_heading">{{srs.diagnosKod}} - {{srs.diagnosBeskrivning}}</span>
     </div>
 </div>
 <wc-support-panel-scrollable-body dom-id="srs-panel-scrollable-body">
@@ -65,10 +53,12 @@
                             <input type="radio" name="risk-opinion-lower" ng-value="'LAGRE'" ng-model="srs.prediction.opinion" ng-change="setOpinion('LAGRE')"/>
                             Lägre
                         </label>
+                        <!-- SKALL LÄGGAS TILL NÄR TJÄNSTEKONTRAKTET UPPDATERATS MED "Kan ej bedöma" -->
 <!--                        <label class="radio-inline line">-->
 <!--                            <input type="radio" name="risk-opinion-kanejbedoma" ng-value="'KANEJBEDOMA'" ng-model="srs.prediction.opinion" ng-change="setOpinion('KANEJBEDOMA')"/>-->
 <!--                            Kan ej bedöma-->
 <!--                        </label>-->
+
                     </div>
                     <div ng-if="srs.prediction.opinionError">
                         <wc-srs-error-box message-string="srs.prediction.opinionError"></wc-srs-error-box>
@@ -100,7 +90,6 @@
                     ng-if="vm.noDataMessage.info"></wc-alert-message>
 
   <div ng-if="!srs.diagnosKod || vm.noDataMessage.incorrectKodverk" class="no-diagnose-entered">
-<!--    <img src="/web/webjars/common/webcert/components/wcSupportPanelManager/wcSrsPanelTab/fmb_no_diagnose.svg"/>-->
     <div ng-if="!srs.diagnosKod" dynamic-label key="srs.warn.no-diagnosis-set"></div>
     <div ng-if="vm.noDataMessage.incorrectKodverk"
          dynamic-label key="{{::vm.noDataMessage.incorrectKodverk }}"
@@ -113,7 +102,4 @@
 
 <div class="srs-footer">
   <span dynamiclink key="srsSkl" class="dark"></span>
-<!--  <img src="/web/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/socialstyrelsen.png"-->
-<!--       width="40"-->
-<!--       height="26">-->
 </div>
