--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/read-only-view/wcIntygReadOnlyView.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/read-only-view/wcIntygReadOnlyView.scss
@@ -1,17 +1,55 @@
-.wc-intyg-read-only {
-  padding: 20px 30px;
-  overflow-y: auto;
+//Flex container for left (intyg) and right (supportpanel)
+//The flex-children takes a 3:2 flex grow ratio
+.ro-webcert-workarea-hflex-container {
+  position: relative;
+  display: flex;
+  flex: auto;
+  min-height: 1%; //without a min-height IE11/edge wont shrink flex-items
+  min-width: 1%;
+  max-width: 1400px;
 
-  .intyg-body {
-    padding: 15px;
-    background-color: $wc-color-27;
+
+  //The intyg container
+  .wc-intyg-read-only {
+    flex: 3 1 800px;
+    min-width: 1%;
+    width: 870px;
+    padding: 20px 15px 0 15px;
+    overflow-y: auto;
+
+    .intyg-body {
+      padding: 15px;
+      background-color: $wc-color-27;
+    }
+
+    .bottom-fadeout-gradient-main {
+      @extend %bottom-gradient;
+      left: auto;
+      width: 870px;
+      padding: 0;
+      z-index: 4;
+    }
+
+    //Here we can override default webcert styles for uv framework components e.g:
+    uv-kategori h2 {
+    }
   }
 
-  .srs-border {
-    border-right:1px $wc-color-20 solid;
-  }
-  //Here we can override default webcert styles for uv framework components e.g:
-  uv-kategori h2 {
+  .ro-webcert-workarea-supportpanel {
+    flex: 2 1 500px;
+    min-width: 1%;
 
+    wc-support-panel-manager {
+      margin: 0;
+
+      &:after {
+        width: 0px;
+      }
+
+      .inside-wrapper {
+        padding: 4px 0 0 0;
+      }
+    }
   }
 }
+
